Partial html and css

--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+    <meta name = "description" content="Assignment portal for Justin Paystrup in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
+    <title>Assignment Portal - Justin Paystrup</title>
+    <link rel="stylesheet" href="/wdd230/style/main.css">
+    </head>
 <body>
-    <h1>Test</h1>
-    <h2>Hello World!</h2>
+    <header>
+        <img src="/wdd230/images/IMG_1139.jpg" alt="picture of Justin">
+        <h1>Justin Paystrup</h1>
+    </header>
+    <li class="lesson">Lesson 1 <a href="https://codepen.io/Jslayer88/pen/oNMYjaY" class="link"> JavaScript Date Output Activity</a></li>
 </body>
 </html>
