--- a/index.html
+++ b/index.html
@@ -10,9 +10,42 @@
     </head>
 <body>
     <header>
-        <img src="/wdd230/images/IMG_1139.jpg" alt="picture of Justin">
-        <h1>Justin Paystrup</h1>
+        <img src="/wdd230/images/IMG_1139.jpg" alt="My portfolio picture">
+        <h1 class ="title">Justin Paystrup</h1>
     </header>
-    <li class="lesson">Lesson 1 <a href="https://codepen.io/Jslayer88/pen/oNMYjaY" class="link"> JavaScript Date Output Activity</a></li>
+    <main>
+        <h2>WDD 230: Assignment Portal</h2>
+        <hr/>
+        <ul id = "lessons">
+            <li>Lesson 01: <a href="https://codepen.io/Jslayer88/pen/oNMYjaY" class="link"> JavaScript Date Output Activity</a></li>
+            
+            <li>Lesson 02: TBA</li>
+            
+            <li>Lesson 03: TBA</li>
+
+            <li>Lesson 04: TBA</li>
+
+            <li>Lesson 05: TBA</li>
+
+            <li>Lesson 06: TBA</li>
+
+            <li>Lesson 07: TBA</li>
+
+            <li>Lesson 08: TBA</li>
+
+            <li>Lesson 09: TBA</li>
+
+            <li>Lesson 10: TBA</li>
+
+            <li>Lesson 11: TBA</li>
+        </ul>   
+        <hr/>
+   
+    </main>
+    <footer>
+        <p>&copy;<span id="year"></span>.:|:.Justin Paystrup.:|:.Rexburg,Idaho</p>
+        <p id="timeupdated">Last updated: <span id="updated"></span></p>
+    </footer>
+    <script src="./scripts/main.js"></script>
 </body>
 </html>
