--- a/index.html
+++ b/index.html
@@ -46,6 +46,6 @@
         <p>&copy;<span id="year"></span>.:|:.Justin Paystrup.:|:.Rexburg,Idaho</p>
         <p id="timeupdated">Last updated: <span id="updated"></span></p>
     </footer>
-    <script src="./scripts/main.js"></script>
+    <script src="./scripts/script.js"></script>
 </body>
 </html>
