--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name = "description" content="Assignment portal for Justin Paystrup in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
     <title>Assignment Portal - Justin Paystrup</title>
-    <link rel="stylesheet" href="/wdd230/style/main.css">
+    <link rel="stylesheet" href="/wdd230/styles/normalize.css">
+    <link rel="stylesheet" href="/wdd230/styles/main.css">
     </head>
 <body>
     <header>
