file names fixed

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name = "description" content="Assignment portal for Justin Paystrup in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
     <title>Assignment Portal - Justin Paystrup</title>
-    <link rel="stylesheet" href="/wdd230/styles/normalize.css">
-    <link rel="stylesheet" href="/wdd230/styles/main.css">
+    <meta name = "description" content="Assignment portal for Justin Paystrup in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
+    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/main.css">
     </head>
 <body>
     <header>
-        <img src="/wdd230/images/IMG_1139.jpg" alt="My portfolio picture">
-        <h1 class ="title">Justin Paystrup</h1>
+        <img src="images/portrait.jpg" alt="My portfolio picture">
+        <h1>Justin Paystrup</h1>
     </header>
     <main>
         <h2>WDD 230: Assignment Portal</h2>
@@ -45,8 +45,8 @@
     </main>
     <footer>
         <p>&copy;<span id="year"></span>.:|:.Justin Paystrup.:|:.Rexburg,Idaho</p>
-        <p id="timeupdated">Last updated: <span id="updated"></span></p>
+        <p>Last updated: <span id="updated"></span></p>
     </footer>
-    <script src="./scripts/script.js"></script>
+    <script src="scripts/script.js"></script>
 </body>
 </html>
