week 2 layout testing

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Assignment Portal - Justin Paystrup</title>
     <meta name = "description" content="Assignment portal for Justin Paystrup in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
     <link rel="stylesheet" href="styles/normalize.css">
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/small.css">
+    <link rel="stylesheet" href="styles/medium.css">
     </head>
 <body>
     <header>
