--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -19,25 +19,37 @@
             </header>
             <main>
                 <section id ="one">
-                    <h1>Repetition</h1>
-                    <h2>Site Name</h2>
-                    <a href=""></a>
-                    <img src="images/portrait.jpg" alt="">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime ut ea quos dolore quisquam iste.</p>
+                    <h1>Contrast</h1>
+                    <h2>netflix.com</h2>
+                    <a href="">https://www.netflix.com/</a>
+                    <img src="images/contrast.png" alt="">
+                    <p>This is a perfect example at showing the contrast design principle.
+                        The dark background with the white font make it super easy to read. 
+                        I also love how even the images on the page really stand out becasue of the dark background 
+                        and bright colors on the images. 
+                    </p>
                 </section>
                 <section id ="two">
                     <h1>Repetition</h1>
-                    <h2>Site Name</h2>
-                    <a href=""></a>
-                    <img src="images/portrait.jpg" alt="">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime ut ea quos dolore quisquam iste.</p>
+                    <h2>amazon.com</h2>
+                    <a href="">https://www.amazon.com/</a>
+                    <img src="images/repetition.png" alt="">
+                    <p>This image which shows a typical product search on amazon, is a perfect
+                        example of repetition. There is consistent product layouts that have the image
+                        title of it, number of stars, and the price. Also, for the most part the fonts,
+                    colors, and layout is pretty much repeated on the entire page.</p>
                 </section>
                 <section id ="three">
-                    <h1>Repetition</h1>
-                    <h2>Site Name</h2>
-                    <a href=""></a>
-                    <img src="images/portrait.jpg" alt="">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime ut ea quos dolore quisquam iste.</p>
+                    <h1>Hick's Law</h1>
+                    <h2>glassesusa.com</h2>
+                    <a href="">https://www.glassesusa.com/eyeglasses-collection</a>
+                    <img src="images/hickslaw.png" alt="">
+                    <p>
+                        Hick's Law is the principle which states that the more options that are 
+                        available to a person the longer it will take for them to make a decision.
+                        This website which sells eye glasses is a perfect example of this. There are dozens of pages just like 
+                        this one that shows endless amount of options for a customer to choose from. 
+                    </p>
                 </section>
             </main>
             <footer>
