--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -21,7 +21,7 @@
                 <section id ="one">
                     <h1>Contrast</h1>
                     <h2>netflix.com</h2>
-                    <a href="">https://www.netflix.com/</a>
+                    <a href="https://www.netflix.com/">Netflix</a>
                     <img src="images/contrast.png" alt="">
                     <p>This is a perfect example at showing the contrast design principle.
                         The dark background with the white font make it super easy to read. 
@@ -32,7 +32,7 @@
                 <section id ="two">
                     <h1>Repetition</h1>
                     <h2>amazon.com</h2>
-                    <a href="">https://www.amazon.com/</a>
+                    <a href="https://www.amazon.com/">Amazon</a>
                     <img src="images/repetition.png" alt="">
                     <p>This image which shows a typical product search on amazon, is a perfect
                         example of repetition. There is consistent product layouts that have the image
@@ -42,7 +42,7 @@
                 <section id ="three">
                     <h1>Hick's Law</h1>
                     <h2>glassesusa.com</h2>
-                    <a href="">https://www.glassesusa.com/eyeglasses-collection</a>
+                    <a href="https://www.glassesusa.com/eyeglasses-collection">GlassesUSA</a>
                     <img src="images/hickslaw.png" alt="">
                     <p>
                         Hick's Law is the principle which states that the more options that are 
