--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="styles/small.css">
     <link rel="stylesheet" href="styles/medium.css">
     <link rel="stylesheet" href="styles/large.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     </head>
 <body>
     <div class = "container">
@@ -20,7 +23,7 @@
             <main>
                 <section id ="one">
                     <h1>Contrast</h1>
-                    <h2>netflix.com</h2>
+                    <h2>Netflix</h2>
                     <a href="https://www.netflix.com/">Netflix</a>
                     <img src="images/contrast.png" alt="">
                     <p>This is a perfect example at showing the contrast design principle.
@@ -31,7 +34,7 @@
                 </section>
                 <section id ="two">
                     <h1>Repetition</h1>
-                    <h2>amazon.com</h2>
+                    <h2>Amazon</h2>
                     <a href="https://www.amazon.com/">Amazon</a>
                     <img src="images/repetition.png" alt="">
                     <p>This image which shows a typical product search on amazon, is a perfect
@@ -41,7 +44,7 @@
                 </section>
                 <section id ="three">
                     <h1>Hick's Law</h1>
-                    <h2>glassesusa.com</h2>
+                    <h2>Glassesusa</h2>
                     <a href="https://www.glassesusa.com/eyeglasses-collection">GlassesUSA</a>
                     <img src="images/hickslaw.png" alt="">
                     <p>
