--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -25,7 +25,7 @@
                     <h1>Contrast</h1>
                     <h2>Netflix</h2>
                     <a href="https://www.netflix.com/">Netflix</a>
-                    <img src="images/contrast.png" alt="">
+                    <img src="images/contrast.jpg" alt="">
                     <p>This is a perfect example at showing the contrast design principle.
                         The dark background with the white font make it super easy to read. 
                         I also love how even the images on the page really stand out becasue of the dark background 
@@ -36,7 +36,7 @@
                     <h1>Repetition</h1>
                     <h2>Amazon</h2>
                     <a href="https://www.amazon.com/">Amazon</a>
-                    <img src="images/repetition.png" alt="">
+                    <img src="images/repetition.jpg" alt="">
                     <p>This image which shows a typical product search on amazon, is a perfect
                         example of repetition. There is consistent product layouts that have the image
                         title of it, number of stars, and the price. Also, for the most part the fonts,
@@ -46,7 +46,7 @@
                     <h1>Hick's Law</h1>
                     <h2>Glassesusa</h2>
                     <a href="https://www.glassesusa.com/eyeglasses-collection">GlassesUSA</a>
-                    <img src="images/hickslaw.png" alt="">
+                    <img src="images/hickslaw.jpg" alt="">
                     <p>
                         Hick's Law is the principle which states that the more options that are 
                         available to a person the longer it will take for them to make a decision.
