--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -21,7 +21,7 @@
                 <h2>Justin Paystrup</h2>
             </header>
             <main>
-                <section id ="one">
+                <section >
                     <h1>Contrast</h1>
                     <h2>Netflix</h2>
                     <a href="https://www.netflix.com/">Netflix</a>
@@ -32,7 +32,7 @@
                         and bright colors on the images. 
                     </p>
                 </section>
-                <section id ="two">
+                <section >
                     <h1>Repetition</h1>
                     <h2>Amazon</h2>
                     <a href="https://www.amazon.com/">Amazon</a>
@@ -42,7 +42,7 @@
                         title of it, number of stars, and the price. Also, for the most part the fonts,
                     colors, and layout is pretty much repeated on the entire page.</p>
                 </section>
-                <section id ="three">
+                <section ">
                     <h1>Hick's Law</h1>
                     <h2>Glassesusa</h2>
                     <a href="https://www.glassesusa.com/eyeglasses-collection">GlassesUSA</a>
