--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <ul id = "lessons">
             <li>Lesson 01: <a href="https://codepen.io/Jslayer88/pen/oNMYjaY" class="link"> JavaScript Date Output Activity</a></li>
             
-            <li>Lesson 02: TBA <a href=""></a></li>
+            <li>Lesson 02: <a href="https://jslayer88.github.io/wdd230/lesson2/design-principles.html"></a>Design Principles Activity</li>
             
             <li>Lesson 03: TBA</li>
 
