--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -22,19 +22,19 @@
             </header>
             <main>
                 <section >
-                    <h1>Contrast</h1>
-                    <h2>Netflix</h2>
+                    <h2>Contrast</h2>
+                    <h3>Netflix</h3>
                     <a href="https://www.netflix.com/">Netflix</a>
                     <img src="images/contrast.jpg" alt="">
                     <p>This is a perfect example at showing the contrast design principle.
                         The dark background with the white font make it super easy to read. 
-                        I also love how even the images on the page really stand out becasue of the dark background 
+                        I also love how even the images on the page really stand out because of the dark background 
                         and bright colors on the images. 
                     </p>
                 </section>
                 <section >
-                    <h1>Repetition</h1>
-                    <h2>Amazon</h2>
+                    <h2>Repetition</h2>
+                    <h3>Amazon</h3>
                     <a href="https://www.amazon.com/">Amazon</a>
                     <img src="images/repetition.jpg" alt="">
                     <p>This image which shows a typical product search on amazon, is a perfect
@@ -42,9 +42,9 @@
                         title of it, number of stars, and the price. Also, for the most part the fonts,
                     colors, and layout is pretty much repeated on the entire page.</p>
                 </section>
-                <section ">
-                    <h1>Hick's Law</h1>
-                    <h2>Glassesusa</h2>
+                <section id="box3">
+                    <h2>Hick's Law</h2>
+                    <h3>Glassesusa</h3>
                     <a href="https://www.glassesusa.com/eyeglasses-collection">GlassesUSA</a>
                     <img src="images/hickslaw.jpg" alt="">
                     <p>
