--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -35,7 +35,7 @@
                 <section >
                     <h2>Repetition</h2>
                     <h3>Amazon</h3>
-                    <a href="https://www.amazon.com/">Amazon</a>
+                    <a href="https://www.amazon.com/s?k=games&crid=8FIJZIWV4OE5&sprefix=games%2Caps%2C356&ref=nb_sb_noss_2">Amazon</a>
                     <img src="images/repetition.jpg" alt="">
                     <p>This image which shows a typical product search on amazon, is a perfect
                         example of repetition. There is consistent product layouts that have the image
