--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             
             <li>Lesson 02: <a href="https://jslayer88.github.io/wdd230/lesson2/design-principles.html">Design Principles Activity</a></li>
             
-            <li>Lesson 03: TBA</li>
+            <li>Lesson 03: <a href="https://jslayer88.github.io/wdd230/lesson3/index.html">Website Planning Activity</a></li>
 
             <li>Lesson 04: TBA</li>
 
