--- a/lesson3/design.html
+++ b/lesson3/design.html
@@ -16,7 +16,7 @@
     </head>
 <body>
     <header>
-        <h1>Littlefield Chamber of Commerce</h1>
+        <h1>Littlefield Chamber of Commerce Planning Document</h1>
         <nav>
             <div><a href="index.html">Home</a></div>
             <div><a href="target-audidence.html">Target-Audience</a></div>
