--- a/lesson3/design.html
+++ b/lesson3/design.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chamber of commerce design page- Justin Paystrup</title>
     <meta name = "description" content="Chamber of commerce planning project for Justin Paystrup in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
+    <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/small.css">
     <link rel="stylesheet" href="styles/medium.css">
     <link rel="stylesheet" href="styles/large.css">
-    <link rel="stylesheet" href="">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto&display=swap" rel="stylesheet">
@@ -27,18 +27,24 @@
 
         <section id = "colors">
             <h1>Color Schema</h1>
-            <p id='header'>Header: #006d77</p>
-            <p id='paragraph'>Paragraph: Black</p>
-            <p id='accent1'>Accent1: #83c5be</p>
-            <p id='accent2'>Accent2: #ffddd2</p>
+            <p id='primary'>Primary: #738290</p>
+            <p id='secondary'>Secondary: #A1B5D8</p>
+            <p id='accent1'>Accent1: #DAD7CD</p>
+            <p id='accent2'>Accent2: #E2E2D9</p>
 
 
         </section>
 
         <section>
             <h2>Typography</h2>
-            <p id="font1">Header Font: Open Sans </p>
-            <p id = "font2">Paragraph Font: Roboto </p>
+            <p class="font1">Title font: Open Sans </p>
+            <p class= "font2">Paragraph Font: Roboto </p>
+            <h3>Example:</h3>
+            <p class = "font1">Title Example </p>
+            <p class ="font2">Pellentesque habitant morbi tristique senectus et netus et 
+                malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, 
+                ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. 
+                Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
         </section>
 
 
