--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chamber of commerce home page- Justin Paystrup</title>
     <meta name = "description" content="Chamber of commerce planning project for Justin Paystrup in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
+    <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/small.css">
     <link rel="stylesheet" href="styles/medium.css">
     <link rel="stylesheet" href="styles/large.css">
-    <link rel="stylesheet" href="">
+
     </head>
 <body>
     <header>
