--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -22,7 +22,7 @@
         </nav>
     </header>
     <main>
-        <section >
+        <div>
             <section>
                 <h2>Site Name</h2>
                 <hr>
@@ -42,12 +42,12 @@
                     the Chamber of Commerce as an online presence.</p>
             </section>
             
-        </section>
+        </div>
     </main>
     <footer>
         <p>&copy;<span id="year"></span>|Justin Paystrup|Last updated: <span id="updated"></span></p>
     </footer>
-</div>
+
 <script src="scripts/lastmod.js"></script>
 </body>
 </html>
