--- a/lesson3/target-audidence.html
+++ b/lesson3/target-audidence.html
@@ -21,7 +21,7 @@
         </nav>
     </header>
     <main>
-        <section id = "targetaud">
+        <div id = "targetaud">
             <section>
                 <h2>Target Audience</h2>
                 <p>The target audience for the Littlefield Chamber of Commerce site is anything
@@ -69,11 +69,8 @@
             </section>
 
             <hr>
-            <section>
-                
-            </section>
 
-            <section >
+            <section>
                 <h2>Scenarios</h2>
                 <ol>
                     <li>A family is thinking about moving into the area and they want to know what activity's
@@ -84,15 +81,15 @@
                     <li>A local elementary school wants to do a winter coat donation program, and want to get in touch with local business to help</li>
                     <li>A individual who just opened a local clothing store is wanting to advertise there business, they look on the chamber of commerce site and start networking with other local businesses.</li>
 
-                </0l>
+                </ol>
             </section>
             
-        </section>
+        </div>
     </main>
     <footer>
         <p>&copy;<span id="year"></span>|Justin Paystrup|Last updated: <span id="updated"></span></p>
     </footer>
-</div>
+
 <script src="scripts/lastmod.js"></script>
 </body>
 </html>
