--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -31,7 +31,7 @@
             </section>
             <section>
                 <h2>Logo</h2>
-                <img src="images/logo.png" alt="">
+                <img src="images/logo.jpg" alt="">
                 <hr>
             </section>
             <section>
