--- a/lesson3/target-audidence.html
+++ b/lesson3/target-audidence.html
@@ -24,7 +24,7 @@
         <div id = "targetaud">
             <section>
                 <h2>Target Audience</h2>
-                <p>The target audience for the Littlefield Chamber of Commerce site is anything
+                <p>The target audience for the Littlefield Chamber of Commerce site is for anyone such as
                     local residents, businesses owners, or anyone else who wants to know more about the community.
                     This is a place where they can find all sorts of information about businesses, things to do, and 
                     local events. Lastly, anyone who is wanting to network with other businesses can connect with them through this site.
