--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -36,10 +36,10 @@
             </section>
             <section>
                 <h2>Site Purpose</h2>
-                <p>The purpose of this site is to connect business owners in Littlefield with other businesses as a way of advertising and networking.
-                    A Chamber of Commerce can help grow the businesses within a town and grow a sense of community among its city residence.Littlefield has a lot to offer new residents, and the chamber of 
-                    commerce helps make these opportunities readily available to the city. In this increasingly digital world, it is vital that
-                    the Chamber of Commerce as an online presence.</p>
+                <p>The purpose of this site is to connect business owners in Littlefield with other businesses as a way of advertising and networking. 
+                A Chamber of Commerce can help grow the businesses within a town and grow a sense of community among its city residence. Littlefield has 
+                a lot to offer new residents, and the chamber of commerce helps make these opportunities readily available to the city. In this increasingly 
+                digital world, it is vital that the Chamber of Commerce as an online presence.</p>
             </section>
             
         </div>
